@@ -46,6 +46,12 @@ set_ripcache() {
     cupsctl RIPCache=`awk '/^MemTotal/ { print $2 / 4 }' /proc/meminfo`"k"
 }
 
+coldplug_usb_printers() {
+    udevadm trigger --subsystem-match=usb \
+                    --attr-match=bInterfaceClass=07 \
+                    --attr-match=bInterfaceSubClass=01
+}
+
 case "$1" in
   start)
 	log_begin_msg "Starting $DESC: $NAME"
@@ -61,8 +67,9 @@ case "$1" in
 
 	start-stop-daemon --start --quiet --oknodo --pidfile "$PIDFILE" --exec $DAEMON && success=1
 
-	log_end_msg $?
 	set_ripcache
+	coldplug_usb_printers
+	log_end_msg $?
 	restart_xprint
 	;;
   stop)
