@@ -1,6 +1,11 @@
 cups (1.3.11-2) UNRELEASED; urgency=low
 
   [ Till Kamppeter ]
+  * debian/cups.init.d: Trigger udev event for all USB printers right after
+    starting the CUPS daemon to run the udev callouts for the printers. This
+    allows automatic print queue setup and re-enabling print queues also if
+    the printer is cold-plugged (connected before CUPS and/or udev got
+    started).
   * debian/cups.init.d: Set CUPS RIP cache to 1/4 of the total RAM when CUPS
     is started. This way CUPS Raster drivers get enough memory for reliable
     and quick operation even if large paper sizes with high resolutions are
